# gravitysim

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp  shader.fs  shader.h  shader.vs  test.cpp
